sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:5: error: type mismatch;
 found   : Boolean(false)
 required: Int
  var fin2:Int = false
                 ^AlgCocktailSort2:7: error: type mismatch;
 found   : Boolean(true)
 required: Int
        fin2 = true
               ^AlgCocktailSort2:11: error: type mismatch;
 found   : Boolean(false)
 required: Int
        fin2 = false
               ^AlgCocktailSort2:18: error: type mismatch;
 found   : Boolean(false)
 required: Int
        fin2 = false
               ^AlgCocktailSort2:22: error: value unary_! is not a member of Int
  } while(!fin2)
          ^